--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_DATABASE_URL_CONFIG=postgresql://form_db_owner:a5ySdwv8YHPg@ep-noisy-sky-a5hk339a.us-east-2.aws.neon.tech/form_db?sslmode=require
 
 NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyBSkiV2yw0tgNdY3RKtc-CkGNMZ9_tPuZI
+
+NEXT_PUBLIC_BASE_URL=http://localhost:3000/
